--- a/leagues/templates/leagues/league_detail.html
+++ b/leagues/templates/leagues/league_detail.html
@@ -12,20 +12,58 @@
 {% include 'color_palette.html' with background_color=league.background_color text_color=league.text_color %}
 
 <!-- Main content section -->
-<div class="w-[280px] m-auto">
-  <div class="flex items-center justify-center gap-1">
-    <img src="{{ league.country_img }}" />
-    <small class="text-center block"> {{ league.country_name }} </small>
+
+
+<div class="flex justify-center">
+  <div class="inline-block p-3 bg-white border border-gray-200 rounded-md shadow">
+    <img width="80" src="{{ image_url }}" class="m-auto block league_main_img" />
+    <h2 class="text-center text-md font-bold">{{ league.name | upper }}</h2>
   </div>
-  <h2 class="text-center">{{ league.name }}</h2>
-  <img src="{{ image_url }}" class="m-auto block league_main_img" />
 </div>
+
+<div class="flex justify-center gap-2 my-5">
+  <div class="highlight_card">
+    <div class="highlight_card h-full w-full max-w-sm justify-center bg-white flex border border-gray-200 rounded-sm gap-2 items-center shadow px-2 py-1">
+      <span class="text-sm">
+        PAÍS:
+      </span>
+      <img width="26" height="16" src="/media/images/countries/{{ country.slug }}{{ country.id }}.png" class="inline-block h-[16px]" />
+      <a href="{% url "country_detail" pk=country.pk %}" class="inline-block text-sm font-bold ">
+        {{ country.name | upper }} 
+      </a>  
+    </div>
+  </div>
+
+  <div class="highlight_card">
+    <div class="highlight_card h-full w-full max-w-sm justify-center bg-white flex border border-gray-200 rounded-sm gap-2 items-center shadow px-2 py-1">
+      <span class="text-sm">
+        SALDO: 
+      </span>
+      {% if "-" in league.balance %}
+        <span class="text-red-700 font-bold text-sm"> {{ league.balance | passToFloat }} </span>
+      {% else %}
+          <span class="text-green-700 font-bold text-sm"> {{ league.balance | passToFloat }} </span>
+      {% endif %}
+    </div>
+  </div>
+
+  <div class="highlight_card">
+    <div class="highlight_card h-full w-full max-w-sm justify-center bg-white flex border border-gray-200 rounded-sm gap-2 items-center shadow px-2 py-1">
+      <span class="text-sm">
+        Nº DE EQUIPES: 
+      </span>
+      <span class="font-bold text-sm"> {{ related_teams_count }} </span>
+    </div>
+  </div>
+
+</div>
+
 
 <!-- Table container -->
 <div class="overflow-x-auto sm:mx-0.5 lg:mx-0.5">
   <div class="py-2 inline-block min-w-full sm:px-6 lg:px-8">
-    <div class="overflow-hidden">
-      <table class="min-w-full">
+    <div class="overflow-hidden rounded-md shadow">
+      <table class="min-w-full rounded-md shadow">
         <thead class="bg-white border-b">
           <tr>
             <th
