--- a/teams/templates/teams/team_list.html
+++ b/teams/templates/teams/team_list.html
@@ -20,7 +20,7 @@
 <!-- Table container -->
 <div class="overflow-x-auto sm:mx-0.5 lg:mx-0.5">
   <div class="py-2 inline-block min-w-full sm:px-6 lg:px-8">
-    <div class="overflow-hidden">
+    <div class="overflow-hidden rounded-md shadow">
       <!-- Teams list table -->
       <table class="min-w-full">
         <thead class="bg-white border-b">
