--- a/leagues/templates/leagues/league_list.html
+++ b/leagues/templates/leagues/league_list.html
@@ -19,7 +19,7 @@
 <!-- Overflow container for horizontal scrolling -->
 <div class="overflow-x-auto sm:mx-0.5 lg:mx-0.5">
   <div class="py-2 inline-block min-w-full sm:px-6 lg:px-8">
-    <div class="overflow-hidden">
+    <div class="overflow-hidden rounded-md shadow">
       <!-- Table for displaying league data -->
       <table class="min-w-full">
         <thead class="bg-white border-b">
