--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{% block page_title %}{% endblock page_title %}</title>
-  <link rel="shortcut icon" href="{% static 'media/images/system/favicon.ico'%}" type="image/x-icon">
+  <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
   <!-- Include links -->
   {% include 'atomic/cells/links.html' %}
 </head>
