--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,13 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-@layer base {
-  .tab {
-    @apply bg-white text-xs cursor-pointer pl-2 pr-3 py-1 shadow-[0px_2px_3px_-1px_rgba(0,0,0,0.1),0px_1px_0px_0px_rgba(25,28,33,0.02),0px_0px_0px_1px_rgba(25,28,33,0.08)];
-  }
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 .montserrat {
   font-family: "Montserrat", sans-serif;
@@ -20,22 +12,16 @@
   box-shadow: var(--shadow-color) 0px 8px 24px;
 }
 
-* {
-  font-family: "Montserrat", sans-serif;
-  font-style: normal;
-  border: unset; 
-}
 
 
-h1, h2{
-  font-family: "Montserrat", sans-serif;
-  padding: 5px 10px;
+h1, h2, a{
+  font-family: "Inter", sans-serif;
 }
 
 
 
 
-h3, h4, h5, h6, li, a, span, th, td, tr{
+h3, h4, h5, h6, li, span, th, td, tr{
   font-family: "Roboto", sans-serif;
 }
 
@@ -58,21 +44,26 @@ input::placeholder {
   color: white;
 }
 
-* ::-webkit-scrollbar {
+*:not(table) ::-webkit-scrollbar {
   width: 5px;
   position: absolute;
   left: -10px;
   margin-left: -10px;
 }
 
+table ::-webkit-scrollbar {
+  width: 5px;
+  display: none;
+}
+
 /* Track */
-* ::-webkit-scrollbar-track {
+*:not(table) ::-webkit-scrollbar-track {
   background: #fff;
   margin-left: -10px;
 }
 
 /* Handle */
-* ::-webkit-scrollbar-thumb {
+*:not(table) ::-webkit-scrollbar-thumb {
   margin-left: -10px;
   background: #a3a3a3;
   width: 5px;
@@ -80,7 +71,7 @@ input::placeholder {
 }
 
 /* Handle on hover */
-* ::-webkit-scrollbar-thumb:hover {
+*:not(table) ::-webkit-scrollbar-thumb:hover {
   background: #a3a3a3;
 }
 
