--- a/templates/atomic/organisms/nav.html
+++ b/templates/atomic/organisms/nav.html
@@ -1,5 +1,5 @@
 <nav
-class="background-color flex justify-between items-center  bg-[#06AA48] fixed w-screen left-0 z-20 h-[50px] pr-4 transition ease-in-out delay-150 shadow-[7px_6px_10px_0px_#00000024]"
+class="background-color flex justify-between items-center  dark:bg-[#0f0f12] fixed w-screen left-0 z-20 h-[50px] pr-4 transition ease-in-out delay-150 shadow-[7px_6px_10px_0px_#00000024]"
 >
 <div class="toggle-menu">
   <div class="line"></div>
@@ -10,7 +10,7 @@ class="background-color flex justify-between items-center  bg-[#06AA48] fixed w-
   class="m-auto absolute left-[50%] -translate-x-[50%] text-2xl font-bold"
 >
   <a href="/" class="mb-0 text-white flex items-center gap-1">
-    <i class="fa fa-futbol-o text-[20px]" aria-hidden="true"></i>
+    {% include 'icons/ball.html' %}
     TEAMS LIST
   </a>
 </h1>
