--- a/countries/templates/countries/country_list.html
+++ b/countries/templates/countries/country_list.html
@@ -70,7 +70,7 @@
             <!-- Country data -->
             <td class="px-2 py-4 whitespace-nowrap text-sm font-medium text-gray-900 dark:text-[#A1A1AA]">
               <!-- Country flag -->
-              <img src="{{ country.flag }}" class="inline-block"/>
+              <img src="/media/images/countries/{{ country.slug }}{{ country.id }}.png" class="inline-block"/>
 
             </td>
             <td class="px-2 py-4 whitespace-nowrap text-sm font-medium text-gray-900 dark:text-[#A1A1AA]">
